--- a/index.html
+++ b/index.html
@@ -7,16 +7,10 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">  
 
   <meta name="theme-color" content="#fafafa">
@@ -24,11 +18,17 @@
 
 <body>
   <div class="container">
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-primary">Primary</button>
+    <div id="js-question" class="ms-3 alert alert-primary" role="alert">
+      A simple primary alert—check it out!
+    </div>
+    <div class="d-flex justify-content-center">
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="ms-1 btn btn-primary">Primary</button>
+      <button type="button" class="ms-1 btn btn-primary">Primary</button>
+      <button type="button" class="ms-1 btn btn-primary">Primary</button>
+    </div>
   </div>
+  <script src="app.js"></script>
 </body>
 
 </html>
